Ya no se utiliza la api externa de mediciones ni se insertan datos, al presionar un día del calendario se muestran las mediciones por centro

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -90,3 +90,8 @@ button:hover {
   cursor: pointer;
   color: #aaa;
 }
+.centro-container {
+  border-bottom: 1px solid #555555;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+}
